--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                 </div>
             </div>
         </div>
-        <script src="features.js"></script>
+    </div>
+    <script src="features.js"></script>
 </body>
 
 </html>
